cmake_minimum_required(VERSION 2.8)
project(Vision2020)
set(CMAKE_CXX_STANDARD 17)
set(WPILIB_PATH /usr/local/wpilib)
include_directories(/usr/local/wpilib/lib /usr/local/wpilib/include /usr/local/wpilib/include/cameraserver /usr/local/wpilib/include/cscore /usr/local/wpilib/include/hal /usr/local/wpilib/include/ntcore /usr/local/wpilib/include/wpilibc /usr/local/wpilib/include/wpiutil)
find_package(OpenCV REQUIRED)
find_package(Threads REQUIRED)
add_executable(vision vision.cpp)
target_link_libraries(vision ${OpenCV_LIBS})
target_link_libraries(vision ${WPILIB_PATH}/lib/libcameraserver.a ${WPILIB_PATH}/lib/libcscore.a ${WPILIB_PATH}/lib/libntcore.a ${WPILIB_PATH}/lib/libwpiHal.a ${WPILIB_PATH}/lib/libwpilibc.a ${WPILIB_PATH}/lib/libwpiutil.a)
target_link_libraries (vision ${CMAKE_THREAD_LIBS_INIT})